examples/failing/ExportConflictClass/B.purs
module B where

class X
